# silero-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
coverage/: coverage.json  index.html
coverage/src/: index.html  vad_environment.rs.html  vad_session.rs.html
examples/simple-segmented-stt-main/: Cargo.toml
examples/simple-segmented-stt-main/audio/: audio_5sec_bursts.pcm  audio_with_pauses.pcm
examples/simple-segmented-stt-main/config/: stt.yaml
examples/simple-segmented-stt-main/src/: main.rs  stt_segment.rs  whisper_wrapper.rs
files/: SileroMetaData.rtf
src/: lib.rs  main.rs  silero_vad_onnx_model.rs  vad_environment.rs  vad_session.rs
