[package]
name = "silero-rs"
version = "0.1.1"
edition = "2021"
description = "Rust API for Silero-VAD"
license = "Unlicense"
documentation = "https://docs.rs/sileror-rs"
repository = "https://github.com/Infoserv-Systems-Ltd/sileror-rs"

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.5.19", features = ["derive"] }
hound = "3.5.1"
ort = "=2.0.0-rc.6"
ndarray = "0.16.1"
rand = "0.8.5"
llvm-tools = "0.1.1"
grcov = "0.8.19"
