[package]
name = "simple-segmented-stt"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
fon = { version = "0.6.0" }
futures = { version = "0.3.30" }
hound = { version = "3.5.1"}
serde = { version = "1.0.203", features = ["derive"] }
serde_json = { version = "1.0.117" }
serde_yaml = { version = "0.9.34" }
tokio = { version = "1.37.0", features = ["full"] }
tokio-stream = { version = "0.1.15", features = ["full"] }
tracing = { version = "0.1.40" }
tracing-subscriber = { version = "0.3.18" }
# I am just commenting this out as being a PoC we can opt to pull from MAIN rather than pin to a release
whisper-rs = { version = "0.11.1", features = ["default"]}
# whisper-rs = { git = "https://github.com/tazz4843/whisper-rs.git", branch = "master", features = ["default"] }
silero-rs = { version = "0.1.1", path = "../silero-rs" }
